--- a/crossing-borders/src/sass/_header.scss
+++ b/crossing-borders/src/sass/_header.scss
@@ -14,6 +14,7 @@
 
 .header__content {
     padding: 25px 25px 0;
+    position: relative;
 }
 
 
@@ -33,4 +34,14 @@
     height: 25px;
     width: 107px;
     text-indent: -9999em;
+
+    margin-bottom: 64px;
 }
+
+
+@media (min-width: 600px) {
+    .header__logo {
+        margin-bottom: 0;
+    }
+}
+
